# ipc-tunnel

./: .gitignore  CMakeLists.txt  console_stuff.txt  lscript.ld
app/: CMakeLists.txt  TC-gcc-arm-linux-conf.cmake  TC-gcc-arm-linux.cmake
app/latency_test/: CMakeLists.txt  main_openamp.cpp
app/src/: StatsProcessing.hpp  main.cpp  t0dataprocess.hpp
app/unit_tests/: CMakeLists.txt  latency.cpp  throughput.cpp
app/util/: CMakeLists.txt  comm.cpp  comm.hpp  globaltimer.cpp  globaltimer.hpp  ipc_tunnel.cpp  ipc_tunnel.hpp  openamp.cpp  openamp.hpp
bsp/: CMakeLists.txt  file_io_stubs.c
bsp/include/: xparameters.h
bsp/ps7_cortexa9_1/include/: xparameters.h
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/compiler/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/compiler/gcc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/compiler/iar/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/processor/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/processor/arm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/system/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/system/generic/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/system/generic/xlnx_common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/libmetal_v2_0/build_libmetal/lib/system/generic/zynq7/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/openamp_v1_5/build_openamp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/openamp_v1_5/build_openamp/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/openamp_v1_5/build_openamp/lib/proxy/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/openamp_v1_5/build_openamp/lib/remoteproc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/openamp_v1_5/build_openamp/lib/rpmsg/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bsp/ps7_cortexa9_1/libsrc/openamp_v1_5/build_openamp/lib/virtio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: shared_state.h
kernel_module_src/: ipc-tunnel.c
latency_test/: CMakeLists.txt
latency_test/common/: packets.h
latency_test/openamp/: CMakeLists.txt  main.c
openamp/: CMakeLists.txt  helper.c  platform_info.c  platform_info.h
src/: application.c  application.h  application_shm.c  interrupt.c  interrupt.h  main.c  scheduler.c  scheduler.h  workload.c  workload.h
unit_tests/: CMakeLists.txt  latency.c  throughput.c
unit_tests/common/: packets.h
variants/: CMakeLists.txt
variants/include/: variant.h
variants/ipc-tunnel-v3/: CMakeLists.txt  ipc_tunnel.c  ipc_tunnel.h  variant.c
variants/openamp/: CMakeLists.txt  variant.c
workload/: CMakeLists.txt
workload/src/: diagnostics.c  diagnostics.h  interrupt.c  interrupt.h  scheduler.c  scheduler.h
